--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,6 +1,33 @@
 {
-  "i18n": {
-    "header": "Поддержка i18n",
-    "footer": "Вы можете выбрать другой язык в выпадающем меню."
+  "welcome": {
+    "title": "Добро пожаловать в The Open Wallet",
+    "description": "The Open Wallet - это бесплатный кошелек с открытым исходным кодом для сообщества.",
+    "start_button": "Начать использовать The Open Wallet",
+    "built_on": "Построен на блокчейне TON"
+  },
+  "login": {
+    "title": "Введите вашу секретную фразу",
+    "description": "Пожалуйста, введите вашу секретную фразу для доступа к кошельку.",
+    "24_words": "24 слова",
+    "12_words": "12 слов",
+    "submit": "Подтвердить",
+    "clear": "Очистить",
+    "loading": "Загрузка..."
+  },
+  "wallet": {
+    "address_copied": "Адрес скопирован в буфер обмена",
+    "send": "Отправить",
+    "receive": "Получить",
+    "balance": "Ваш баланс"
+  },
+  "settings": {
+    "title": "Настройки",
+    "notifications": "Уведомления",
+    "passcode": "Пароль",
+    "language": "Язык",
+    "currency": "Валюта",
+    "danger_zone": "Опасная зона",
+    "clear_data": "Очистить данные"
   }
 }
+
